@@ -1,9 +1,7 @@
 <div class="row">
     <div class="col-lg-4">
         {{ form_start(form) }}
-        {% if form.offsetExists('externalid') %}
-            {{ form_row(form.externalid) }}
-        {% endif %}
+        {{ form_row(form.icpcid) }}
         {{ form_row(form.name) }}
         {{ form_row(form.category) }}
         {{ form_row(form.members) }}
