@@ -20,10 +20,10 @@
                     <td>{{ team.teamid }}</td>
                 </tr>
                 <tr>
-                    <th>External ID</th>
+                    <th>ICPC ID</th>
                     <td>
-                        {% if team.externalid %}
-                            {{ team.externalid }}
+                        {% if team.icpcid %}
+                            {{ team.icpcid }}
                         {% else %}
                             -
                         {% endif %}
